--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="./lib/p5.gif.min.js"></script>
     <script src="./lib/matter.js"></script>
     <script src="./js/Canhao.js"></script>
+    <script src="./js/BaladoCanhao.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css" />
 
