--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="./lib/matter.js"></script>
     <script src="./js/Canhao.js"></script>
     <script src="./js/BaladoCanhao.js"></script>
+    <script src="./js/Navio.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css" />
 
